--- a/SR43/localisation/countries_l_english.yml
+++ b/SR43/localisation/countries_l_english.yml
@@ -356,16 +356,17 @@
  GER_democratic_ADJ:0 "Germanic"
  GER_communism_ADJ:0 "Germanic"
  GER_brotherhood_ADJ:0 "Brotherhoos"
- ENG_fascism:0 "England Empire"
- ENG_fascism_DEF:0 "the England Empire"
+ ENG_fascism:0 "English Empire"
+ ENG_fascism_DEF:0 "the English Empire"
  ENG_democratic:0 "England"
  ENG_democratic_DEF:0 "England"
  ENG_neutrality:0 "Kingdom of England"
  ENG_neutrality_DEF:0 "the Kingdom of England"
- ENG_communism:0 "England Union"
+ ENG_communism:0 "English Union"
  ENG_communism_DEF:0 "the English Union"
  ENG_nationalism:0 "English State"
  ENG_nationalism_DEF:0 "the English State"
+ ENG_nationalism_ADJ:0 "English"
  ENG_islamism:0 "English Califate"
  ENG_islamism_DEF:0 "English Califate"
  ENG_liberalism:0 "England"
@@ -2776,33 +2777,6 @@
  GER_fascism_ADJ:0 "German"
  GER_democratic_ADJ:0 "German"
  GER_communism_ADJ:0 "German"
- ENG_fascism:0 "English Empire"
- ENG_fascism_DEF:0 "the English Empire"
- ENG_democratic:0 "England"
- ENG_democratic_DEF:0 "the England"
- ENG_communism:0 "England Union"
- ENG_communism_DEF:0 "the England Union"
- ENG_neutrality:0 "Great Britain"
- ENG_neutrality_DEF:0 "the England Union"
- ENG_nationalism:0 "England State"
- ENG_nationalism_DEF:0 "the Wales State"
- ENG_islamism:0 "England Caliphatee"
- ENG_islamism_DEF:0 "the England Caliphatee"
- ENG_liberalism:0 "England"
- ENG_liberalism_DEF:0 "the England"
- ENG_conservatism:0 "England"
- ENG_conservatism_DEF:0 "the England"
- ENG_social_democrats:0 "England"
- ENG_social_domocrats_DEF:0 "the England"
- ENG_fascism_ADJ:0 "British"
- ENG_democratic_ADJ:0 "British"
- ENG_communism_ADJ:0 "British"
- ENG_neutrality_ADJ:0 "British"
- ENG_social_democrats_ADJ:0 "British"
- ENG_conservatism_ADJ:0 "British"
- ENG_liberalism_ADJ:0 "British"
- ENG_islamism_ADJ:0 "British"
- ENG_brotherhood_ADJ:0 "British"
  SOV_fascism:0 "Russian Empire"
  SOV_fascism_DEF:0 "the Russian Empire"
  SOV_democratic:0 "Russian Federation"
